@@ -10,7 +10,6 @@ import org.springframework.stereotype.Repository;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 @Slf4j
@@ -27,20 +26,18 @@ public class PriceDbRepository implements PriceRepository {
     @Override
     public List<PriceRecord> findAll() {
         log.debug("db findAll");
-        return jpaRepository.findAll()
-                .stream()
+        return jpaRepository.findAll().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Optional<PriceRecord> findApplicable(int brandId, long productId, LocalDateTime applicationDate) {
         log.debug("db findApplicable brandId={} productId={} date={}", brandId, productId, applicationDate);
         Optional<PriceRecord> result = jpaRepository.findTopApplicable(brandId, productId, applicationDate)
-                .stream()
-                .findFirst()
                 .map(mapper::toDomain);
-        log.debug("db findApplicable resultPresent={} brandId={} productId={} date={}", result.isPresent(), brandId, productId, applicationDate);
+        log.debug("db findApplicable resultPresent={} brandId={} productId={} date={}",
+                result.isPresent(), brandId, productId, applicationDate);
         return result;
     }
 }
